fixed text gradient clipping

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,7 @@ radial-gradient(at 35% 67%, hsla(261, 91%, 65%, 1) 0, hsla(261, 91%, 65%, 0) 50%
   @apply bg-transparent text-white px-4 py-2 rounded-md border border-primary-800;
 }
 .text-orange-gradient{
-  @apply bg-gradient-to-r from-pink-500 to-orange-600 bg-clip-text text-transparent;
+  @apply bg-gradient-to-r from-pink-500 to-orange-600 bg-clip-text text-transparent leading-[1.3];
 }
 .icon-btn{
   @apply bg-gray-700 text-white px-3 py-3 rounded;
